--- a/src/shared/template/index.pug
+++ b/src/shared/template/index.pug
@@ -3,6 +3,8 @@ html
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title Template Monster
+    title= title
+    style!= styles
   body
-    main#root.root= page
+    main#root.root!= page
+    != scripts
