--- a/src/shared/template/index.pug
+++ b/src/shared/template/index.pug
@@ -1,10 +1,39 @@
-html
+doctype html
+html(lang='en')
   head
-    meta(charset="utf-8")
-    meta(http-equiv="x-ua-compatible" content="ie=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    title= title
+    meta(charset='utf-8')
+    script.
+      "use strict";
+      if (
+      ('fontDisplay' in document.documentElement.style)
+      || (localStorage && localStorage.getItem('font'))
+      ) {
+      document.documentElement.classList.add('font');
+      }
+    meta(http-equiv='x-ua-compatible', content='ie=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='msapplication-TileColor', content='#2196f3')
+    meta(name='msapplication-TileImage', content='/mstile-144x144.png')
+    meta(name='msapplication-config', content='/browserconfig.xml')
+    meta(name='theme-color', content='#ffffff')
+    if title
+      title= title
+    else
+      title Template Monster
+    link(rel='apple-touch-icon', sizes='180x180', href='/apple-touch-icon.png')
+    link(rel='icon', type='image/png', href='/favicon-32x32.png', sizes='32x32')
+    link(rel='icon', type='image/png', href='/favicon-16x16.png', sizes='16x16')
+    link(rel='manifest', href='/manifest.json')
+    link(rel='mask-icon', href='/safari-pinned-tab.svg', color='#5bbad5')
+    link(rel='shortcut icon', href='/favicon.ico')
     style!= styles
   body
+    != svgSprite
     main#root.root!= page
+    script(src='javascript/fontloader.js', async=true)
+    script.
+      (function LoadWorker() {
+      if ( !navigator.serviceWorker ) return;
+      navigator.serviceWorker.register( "worker.js" , { scope: '/' } );
+      })();
     != scripts
