--- a/src/shared/assets/styles/main.pcss
+++ b/src/shared/assets/styles/main.pcss
@@ -66,3 +66,9 @@ a:focus {
 [type='button']:-moz-focusring {
   outline: 0;
 }
+
+[class^='root'] {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
