--- a/src/shared/template/index.pug
+++ b/src/shared/template/index.pug
@@ -31,7 +31,7 @@ html(lang='en')
     != svgSprite
     script.
       window.__REDUX_STATE__=!{state};
-    main#root.root!= page
+    div#root.root!= page
     script(src='/javascript/fontloader.js', async=true)
     script.
       (function LoadWorker() {
